Review Request 15538 see PLS-8452, PLS-9501, PLS-9650 - fix for rating attribute card throwing error and stopping javascript - fix for graphs with callbacks not refreshing - removed delete button when bucket value has pointer events disabled - covering case when business calendar is empty and not null

--- a/le-ui/projects/common/components/datacloud/picker/picker.component.scss
+++ b/le-ui/projects/common/components/datacloud/picker/picker.component.scss
@@ -67,6 +67,9 @@ div.value-picker {
             pointer-events: none;
             position: relative;
             left: 0;
+            .query-section-item-controls {
+                display: none;
+            }
         }
 
         .query-section-item-box {
